# Stable-Fluids

./: CMakeLists.txt  README.md  gl_api.cpp  gl_api.h  main.cpp  stable_fluid.h
.github/workflow/: cmake.yaml
.github/workflows/: cmake.yml
demo/: demo
include/: gl_api.h  solver.h  stable_fluid.h
include/glad/: glad.h
lib/lib/cmake/glew/: glew-targets-release.cmake  glew-targets.cmake
lib/lib/cmake/glfw3/: glfw3ConfigVersion.cmake
lib/lib/pkgconfig/: glew.pc
src/: gl_api.cpp  glad.c
